--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ etptypes = "1.0.0"
 fmt = "0.1.0"
 regex = "1.9.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.105"
 uuid = { version = "1.4.1", features = ["v4", "serde"]}
